--- a/src/pages/setting/Setting.scss
+++ b/src/pages/setting/Setting.scss
@@ -7,6 +7,7 @@
   width: 60%;
   padding: 12px 0;
   justify-content: space-between;
+  align-items: center;
 
   button {
     border: none;
@@ -18,6 +19,14 @@
 
   .setting__block-title {
     width: 152px;
+  }
+
+  form {
+    display: flex;
+  }
+
+  span {
+    display: flex;
   }
 }
 
